项目微调更新

--- a/src/index1.html
+++ b/src/index1.html
@@ -31,6 +31,7 @@
         pointer-events: none;
         z-index: 1; /* TODO Solve this in HTML */
         font-size: 30px;
+        color: aliceblue;
       }
     </style>
     
