优化了代码结构，增加了积分和目标显示

--- a/src/index1.html
+++ b/src/index1.html
@@ -37,7 +37,7 @@
     
   </head>
   <body>
-    <div id="info" >Speed:<div id="speedshow"></div></div>
+    <div id="info" >Speed:<div id="speedshow"></div><div id="Target"></div><div id="Posshow"></div><div id="ScoreSum"></div></div>
     <div><canvas id="webgl"></canvas></div>
   </body>
 </html>
