--- a/src/index1.html
+++ b/src/index1.html
@@ -37,6 +37,7 @@
     
   </head>
   <body>
+    <script src="../node_modules/three/examples/js/libs/inflate.min.js"></script>
     <div id="info" >Speed:<div id="speedshow"></div><div id="Target"></div><div id="Posshow"></div><div id="ScoreSum"></div></div>
     <div><canvas id="webgl"></canvas></div>
   </body>
